[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudflare-tunnel-auth"
version = "1.0.0"
description = "Secure authentication library for FastAPI apps behind Cloudflare Tunnel"
readme = "README.md"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Framework :: FastAPI",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["cloudflare", "authentication", "fastapi", "jwt", "security", "tunnel"]
requires-python = ">=3.10,<3.15"

dependencies = [
    "fastapi>=0.104.0",
    "pydantic>=2.4.0",
    "pydantic-settings>=2.0.0",
    "PyJWT[crypto]>=2.9.0",
    "cryptography>=42.0.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
redis = [
    "redis>=5.0.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.9.0",
    "ruff>=0.1.0",
    "mypy>=1.6.0",
    "pre-commit>=3.5.0",
]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
]
security = [
    "bandit>=1.7.5",
    "safety>=2.3.0",
]
all = [
    "cloudflare-tunnel-auth[redis,dev,test,security]",
]

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/cloudflare-tunnel-auth"
Documentation = "https://github.com/YOUR_USERNAME/cloudflare-tunnel-auth/blob/main/README.md"
Repository = "https://github.com/YOUR_USERNAME/cloudflare-tunnel-auth"
Issues = "https://github.com/YOUR_USERNAME/cloudflare-tunnel-auth/issues"
Changelog = "https://github.com/YOUR_USERNAME/cloudflare-tunnel-auth/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["cloudflare_tunnel_auth*"]
exclude = ["tests*", "examples*", "docs*"]

[tool.setuptools.package-data]
cloudflare_tunnel_auth = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=cloudflare_tunnel_auth",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "security: Security vulnerability tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]

[tool.coverage.run]
source = ["cloudflare_tunnel_auth"]
omit = [
    "*/tests/*",
    "*/examples/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312", "py313"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "S",  # bandit (security)
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "S101",  # use of assert (ok in tests)
]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101", "S105", "S106"]  # Allow assert and hardcoded passwords in tests

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.bandit]
exclude_dirs = ["tests", "examples"]
skips = ["B101"]  # assert_used (ok in tests)
